[gd_scene load_steps=3 format=3 uid="uid://ccirg8bg78hw6"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_04f1g"]
[ext_resource type="Theme" uid="uid://x3meyun4bi1w" path="res://Other/MainTheme.tres" id="2_ltq8s"]

[node name="MainMenu_tscn" type="Node2D"]
script = ExtResource("1_04f1g")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1154.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00392157, 0.0862745, 0.117647, 1)

[node name="Title" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 264.0
offset_top = 132.0
offset_right = 889.0
offset_bottom = 308.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_ltq8s")
theme_override_font_sizes/normal_font_size = 128
bbcode_enabled = true
text = "Code [color=598392]Blue[/color]"
fit_content = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 280.0
offset_top = 365.0
offset_right = 880.0
offset_bottom = 550.0
theme_override_constants/separation = 25

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ltq8s")
theme_override_font_sizes/font_size = 32
text = "PLAY"

[node name="ControlsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ltq8s")
theme_override_font_sizes/font_size = 32
text = "CONTROLS"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ltq8s")
theme_override_font_sizes/font_size = 32
text = "CREDITS"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
